# papers

./: .gitignore  LICENSE  PATH_A_RESOLUTION.md
substrate_sm_derivation/cy3_solver/: Cargo.toml  build.rs
substrate_sm_derivation/cy3_solver/output/: concern_a_no_orth.json  concern_a_tol_1e-10.json  concern_a_tol_1e-12.json  concern_a_tol_1e-14.json  concern_a_tol_1e-8.json  concern_d_td5_25k.json  concern_e_p77_lamT0.json  concern_e_p78_orth.json  gpu_results.json  hybrid_results.json  p4_7_tracefree_ricci.json  p5_10_k4_adaptive.json  p5_10_k4_adaptive.kernel.replog  p5_10_k4_adaptive.replog  p5_10_k4_damped.json  p5_10_k4_damped.kernel.replog  p5_10_k4_damped.replog  p5_10_k4_gpu_donaldson_only.json  p5_10_k4_gpu_donaldson_only.kernel.replog  p5_10_k4_gpu_donaldson_only.replog  p5_10_k5_damped.json  p5_10_k5_damped.kernel.replog  p5_10_k5_damped.replog  p5_10_k5_damped_relaunch.json  p5_10_k5_damped_relaunch.kernel.replog  p5_10_k5_damped_relaunch.replog  p5_10_n25k_p5_5k.json  p5_10_n40k.json  p5_10_n40k_p5_5k.json  p5_10_round3.json  p5_10_round4.json  p5_10_smoke.json  p5_10_smoke.kernel.replog  p5_10_smoke.replog  p5_10_ty_schoen_5sigma_p5_5j.json  p5_10_ty_schoen_5sigma_pre_fix.json  p5_10_ty_schoen_5sigma_pre_p5_5f.json  p5_3_multi_seed_ensemble.json  p5_3_quick.json  p5_5d_hostile_diag.json  (+138 more)
substrate_sm_derivation/cy3_solver/output/bit_exact_fix/: p5_10_legacy_lcg_reduced.json  p5_10_legacy_lcg_reduced.kernel.replog  p5_10_legacy_lcg_reduced.replog  p5_10_xoshiro_reduced.json  p5_10_xoshiro_reduced.kernel.replog  p5_10_xoshiro_reduced.replog
substrate_sm_derivation/cy3_solver/references/: aklp_2010.md  aklp_2010_paper_text.md  anderson_he_lukas_2007.md  ashmore_he_ovrut_2019.md  cy3_publication_summary.md  dhhkw_2008_dp3.md  dklr_2006.md  donaldson_2009.md  headrick_wiseman_2005.md  larfors_2022.md  p3_10_kscan_results.md  p4_3_phi_model_results.md  p4_4_calabi_flow_results.md  p4_5_calabi_flow_phase3.md  p4_7_tracefree_ricci.md  p5_10_5sigma_target.md  p5_4_ty_z3_initial_sigma.md  p5_5_bit_exact_hblock.md  p5_5d_hostile_verification.md  p5_5d_p5_9_full_postfix_k4.md  p5_6_yukawa_propagation_results.md  p5_7_ty_schoen_discrimination.md  p5_8_bayes_demo_results.md  p5_9_ako_apples_to_apples.md  p6_3_chain_match.md  p7_12_omega_fix_reconciliation.md  p7_1b_omega_fix_results.md  p7_2b_omega_fix_localized.md  p7_3_bundle_laplacian_omega_fix.md  p7_4_omega_fix_ratio_search.md  p7_5_h4_gateway_test.md  p7_6_z3xz3_h4_omega_fix.md  p7_7_higher_k_omega_fix.md  p7_8.md  p8_3_followup_a2_tensor_sparsity_diagnostic.md  p8_3_followup_a_zero_mode_diagnostic.md  p8_3_followup_b_chern_3factor_extension.md  p8_3_yukawa_production_results.md  p8_4_followup_donaldson_stall_diagnostic.md  p8_4_k4_production.md  (+48 more)
substrate_sm_derivation/cy3_solver/src/: automorphism.rs  bench_donaldson.rs  bench_gpu.rs  bench_hybrid.rs  bench_pipeline.rs  bench_refine.rs  bench_threads.rs  bench_yukawa.rs  bootstrap.rs  calabi_metric.rs  cicy_sampler.rs  discriminate.rs  geometry.rs  gpu.rs  gpu_adam.rs  gpu_harmonic.rs  gpu_omega.rs  gpu_polynomial_seeds.rs  gpu_quintic.rs  gpu_sampler.rs  gpu_yukawa.rs  heterotic.rs  kernels.rs  lib.rs  linalg.rs  nn_metric.rs  orchestrator.rs  pdg.rs  pipeline.rs  quintic.rs  quotient.rs  reference_metrics.rs  refine.rs  route12.rs  route5.rs  simd_kernels.rs  topology_filters.rs  workspace.rs  yukawa_overlap.rs  yukawa_sectors.rs  (+1 more)
substrate_sm_derivation/cy3_solver/src/route12/: route1.rs  route2.rs
substrate_sm_derivation/cy3_solver/tests/: test_bayes_factor_integration.rs  test_bayes_multichannel_integration.rs  test_complete_prediction_set_pinned.rs  test_dp9_w_invariant_proj_pinned.rs  test_p5_10_determinism.rs  test_route2_real_tensor.rs  test_schoen_bundle.rs
(+133 files in other folders)
